# metadamage

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  dashboard.py  dashboard_helper.py  environment.yaml  main_lead.py  matplotlibrc  pyproject.toml  pyproject_old.toml  small.csv
.github/workflows/: test.yaml
assets/: custom-spinner.css
clitest/: __init__.py  __main__.py  cli.py  cli_utils.py  configs.py  logs.py  main.py  ngsLCA_wrapper.py  parquet_convert.py  paths.py  read_ids_database.py  rich.py  utils.py
clitest/meta_dashboard/: __init__.py  app.py  content.py  figures.py  results.py  utils.py
clitest/meta_fit/: LCA.py  ___utils.py  __init__.py  fit_utils.py  fits.py  fits_Bayesian.py  fits_frequentist.py  io.py  logs.py  main.py  mismatch.py  mismatches.py  results.py  style.mplstyle  utils.py
metadamage/: LCA.py  __init__.py  __main__.py  cli.py  cli_utils.py  counts.py  fit_utils.py  fits.py  fits_Bayesian.py  fits_frequentist.py  fits_utils.py  io.py  logs.py  main.py  mismatches.py  parquet_convert.py  progressbar.py  results.py  taxonomy.py  utils.py
metadamage/dashboard/: __init__.py  app.py  content.py  elements.py  figures.py  fit_results.py  results.py  utils.py
metadamage/dashboard/old/: app.py  bootstrap.py  datatable.py  elements.py  figures.py  fit_results.py  utils.py
tests/: test_metadamage.py
