[tool.poetry]
name = "clitest"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.2"}
click-help-colors = "^0.9"
dash = "^1.20.0"
dash-bootstrap-components = "^0.12.2"
dash-extensions = "^0.0.55"
numpy = "^1.20.3"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
pyarrow = "^4.0.1"
rich = "^10.2.2"
plotly = "^4.14.3"
pre-commit = "^2.13.0"
scipy = {version = "^1.6.3", python = ">=3.8,<3.10"}
ete3 = "^3.1.2"
joblib = "^1.0.1"
timeout-decorator = "^0.5.0"
numpyro = "^0.6.0"
iminuit = "^2.6.1"
numba = {version = "^0.53.1", python = ">=3.8,<3.10"}
psutil = "^5.8.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.8.3"
flake8 = "^3.9.2"
black = {version = "^21.5b2", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clitest = "clitest.cli:cli_main"


[tool.poe.tasks]
test   = "pytest ."
isort = "isort ."
format = "black ."
black = ["format"]
clean = """
# Multiline commands including comments work too. Unescaped whitespace is ignored.
rm -rf .coverage
       .mypy_cache
       .pytest_cache
       metadamage/logs/*
       dist
       ./**/__pycache__
"""
build = "poetry build"
_publish = "poetry publish"
_git_push_with_tags = "git push --follow-tags"
git_release = ["_git_push_with_tags"]

lint = ["isort", "black"]
test_and_lint = ["test", "lint"]

# poe release
release = ["test", "isort", "black", "clean", "build", "_publish", "git_release"]
publish = ['release']

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
